--- a/Pages/Landing_Page/Navigation_Bar_&_Footer.css
+++ b/Pages/Landing_Page/Navigation_Bar_&_Footer.css
@@ -202,7 +202,9 @@ a:hover {
 }
 
 @media (max-width: 768px) {
-
+body{
+    margin-top: -130px;
+}
     .nav-left,
     .notcart {
         display: none;
