--- a/Pages/Contact_Us/Design_CSS_&_Background/Contact_Us.css
+++ b/Pages/Contact_Us/Design_CSS_&_Background/Contact_Us.css
@@ -51,6 +51,7 @@ body {
 }
 
 .contact-form button {
+    font-family: "Sour Gummy", serif;
     background: #f9ca5c;
     color: rgb(0, 0, 0);
     padding: 10px 15px;
