--- a/Pages/Landing_Page/Navigation_Bar_&_Footer.css
+++ b/Pages/Landing_Page/Navigation_Bar_&_Footer.css
@@ -31,7 +31,7 @@ header {
     width: 100%;
     height: 96px;
     padding: 0px 2.5%;
-    padding-top: 6px;
+    padding-top: 2px;
     max-width: 100%;
     position: absolute;
     top: 0;
@@ -115,6 +115,7 @@ a:hover {
 }
 
 .nav-logo-full {
+    margin-right: -10px;
     width: 220px;
 }
 
