--- a/Pages/Nos_Produits/Design_CSS/Global_Nos_Produits.css
+++ b/Pages/Nos_Produits/Design_CSS/Global_Nos_Produits.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Pacifico&family=Roboto+Slab:wght@100..900&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
-    
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -77,6 +77,46 @@ li {
     margin: 30px;
 }
 
+@media (max-width: 768px) {
+    .nav-list {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: -10px;
+        user-select: none;
+        overflow-x: auto;
+        scrollbar-width: none;
+        -ms-overflow-style: none;
+        scrollbar-color: #5C4033 rgba(255, 255, 255, 0.5);
+        -webkit-overflow-scrolling: touch;
+        white-space: nowrap;
+        justify-content: flex-start;
+        padding: 10px
+    }
+
+    .nav-list::-webkit-scrollbar {
+        height: 8px;
+    }
+
+    .nav-list::-webkit-scrollbar-thumb {
+        background-color: #5C4033;
+        border-radius: 4px;
+    }
+
+    .nav-list::-webkit-scrollbar-track {
+        background-color: rgba(255, 255, 255, 0.5);
+    }
+
+    .nav-list li {
+        flex: 0 0 auto;
+    }
+
+    .nav-list a {
+        font-size: 1rem;
+        padding: 8px 15px;
+    }
+}
+
 
 /* ---- Designer_Par_Hossame_Eddine_Aberaich ---  */
 * {
@@ -100,9 +140,9 @@ header {
     padding: auto;
     margin: 0 20px;
     font-weight: 600;
-    z-index: 9999; 
+    z-index: 9999;
     margin-top: -20px;
-    
+
 }
 
 .navbar,
@@ -120,9 +160,9 @@ header {
     transform: translateY(-100%);
     transition: transform 0.3s ease-in-out;
     position: fixed;
-    z-index: 9999; 
+    z-index: 9999;
     margin-right: 20px;
-    
+
 
 }
 
@@ -146,7 +186,7 @@ header {
 
 
 .navbar.scrolled {
-    
+
     opacity: 0;
     transform: translateY(-100%);
 }
@@ -292,6 +332,7 @@ a:hover {
     }
 
     .nav-center {
+
         display: flex;
         flex: auto;
 
@@ -301,11 +342,12 @@ a:hover {
         align-items: center;
         justify-content: center;
         width: 120px;
-        margin-right: -90px;
+        margin-right: -230px;
     }
 
 
     .nav-logo-mini {
+        margin-right: -90px;
         align-items: center;
         justify-content: center;
 
@@ -313,6 +355,8 @@ a:hover {
 
     .navbar,
     .navbar-sticky {
+
+        width: 94%;
         height: 70px;
         padding: 0 5%;
     }
@@ -327,7 +371,8 @@ a:hover {
         display: flex;
         align-items: center;
         gap: 0;
-        padding-right: 30px;
+        padding-right: 0px;
+        margin-right: -5px;
     }
 
     .dropdown_menu {
@@ -384,7 +429,7 @@ a:hover {
     justify-content: space-between;
     flex-wrap: wrap;
     margin-bottom: 20px;
-    
+
 }
 
 .footer-column {
