--- a/Pages/Nos_Produits/Design_CSS/Nos_Produits.css
+++ b/Pages/Nos_Produits/Design_CSS/Nos_Produits.css
@@ -116,8 +116,13 @@ figcaption {
 }
 
 .total-price {
-    font-weight: bold;
-    margin-left: 10px;
+    width: 100%;
+    text-align: center;
+    
+    font-size: 18px;
+    color: black;
+    
+    
 }
 .figure.show {
     opacity: 1;
